# ExtractModule

./: .gitignore  CMakeLists.txt  extract.conf.in  install.sh  variant.profile.in
include/: Linkdef.h  extract_module.h  track_info.h
src/: extract_module.cc  track_info.cc
